fixed scrollbar

--- a/frontend/src/app/artifact/single-artifact-view/single-artifact-view.component.scss
+++ b/frontend/src/app/artifact/single-artifact-view/single-artifact-view.component.scss
@@ -37,7 +37,6 @@
     margin-top: -20px;
 }
 
-
 // Scrollbar
 ::-webkit-scrollbar {
     width: 10px;
@@ -45,7 +44,7 @@
 
 // Scrollbar background
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background: white;
     border-radius: 10px;
 }
 
